# django_crud

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
myapp/: models.py  serializers.py  views.py
myapp/migrations/: 0001_initial.py
myapp/utils/: authentications.py
myproject/: settings.py  urls.py
